2009-12-16  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/robot.pm: make chg-robot's Interface easier to
	  subclass

2009-12-16  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda-changers.7.xml: add docs for old chg-multi,
	  based on example/chg-multi.conf

2009-12-15  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/ndmp-device.c: use err_code, instead of err_msg, to
	  detect an NDMPConnection error

2009-12-15  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/ndmp-device.c: fix use of ndmp4_* enumerated types

2009-12-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/disk.pm: Keep track of pid, automatically remove
	  drive if the pid is dead.

2009-12-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c: Add validate_optionstr,  optionstr and
	  xml_optionstr no longer do validation..
	* server-src/diskfile.h: Add validate_optionstr, change prototype for
	  optionstr and xml_optionstr.
	* server-src/amadmin.c: Add missing case.
	* server-src/amcheck.c, server-src/amindexd.c, server-src/planner.c:
	  Use validate_optionstr, Change for new *_optionstr prototype.
	* server-src/driver.c: Use validate_optionstr.
	* server-src/driverio.c: Change for new *_optionstr prototype.
	* installcheck/amdump.pl: Check planner error from validate_optionstr.

2009-12-15  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_NDMP.pl device-src/ndmp-device.c
	  ndmp-src/ndmpconnobj.c ndmp-src/ndmpconnobj.h: return an object with
	  an error set instead of just returning an error from the constructor
	* perl/Makefile.am perl/Amanda/NDMP.swg: SWIGging of ndmpconnobj
	* perl/Amanda/NDMP.pod: docs for same

2009-12-15  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/ndmpconnobj.c ndmp-src/ndmpconnobj.h: add ndmp_scsi_*

2009-12-15  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/amglue/amglue.h: amglue_newSv[iu]64 requires special care
	  when used in an outgoing typemap, due to stack stomping