@@ -1,4 +1,7 @@
 2009-12-16  Dustin J. Mitchell <dustin@zmanda.com>
+	* installcheck/Amanda_Changer_robot.pl: fix installchecks
+
+2009-12-16  Dustin J. Mitchell <dustin@zmanda.com>
 	* perl/Amanda/Changer/robot.pm: make chg-robot's Interface easier to
 	  subclass
 
